syntax = "proto3";

package syft.core.node.common.action;

import "proto/core/common/common_object.proto";
import "proto/core/io/address.proto";

message TFFAction {
  syft.core.io.Address address = 1;
  syft.core.common.UID msg_id = 2;
}
